feat: catchall with redirect
